# document-sync

./: .build.sh.swp  .gitignore  CMakeLists.txt  CMakelists.txt  Dockerfile  LICENSE  README.md  build.sh  desc.txt  test.txt
include/: Packet.hpp  clientComManager.h  clientFileManager.h  clientList.h  clientParser.h  comManager.h  commandStatus.h  fileManager.h  fileTransfer.h  packet.h  serverComManager.h  serverFileManager.h  serverList.h  serverStatus.h
src/client/: client.cpp  explanation.txt
src/client/clientParser/: clientParser.cpp
src/client/comManager/: clientComManager.cpp  comManager.cpp
src/client/fileManager/: clientFileManager.cpp
src/client/myClient/: myClient.cpp
src/client/syncDir/: kenjitest.txt  socket_cmd.txt  test.txt
src/client/sync_dir/: download.txt  kkkkenji.txt  socket_upload.txt  test.txt
src/comMenagment/: explanation.txt
src/server/: explanation.txt  server.cpp
src/server/comManager/: serverComManager.cpp
src/server/fileManager/: fileManager.cpp  serverFileManager.cpp
src/server/syncDir/: kenjitest.txt
src/server/userDirectories/: socket_cmd.txt
src/server/userDirectories/sync_dir_diego/: socket_upload.txt
src/server/userDirectories/sync_dir_leo/: socket_cmd.txt
src/syncMod/: explanation.txt
sync_dir/: explanation.txt
test_files/: test.txt
